[workspace]
members = [
    "ic-cdk",
    "ic-cdk-bindgen",
    "ic-cdk-executor",
    "ic-cdk-macros",
    "ic-cdk-timers",
    "ic-management-canister-types",
    "ic0",
    "library/*",
    "e2e-tests",
]
resolver = "2"
exclude = ["candid-extractor"]

[workspace.package]
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
repository = "https://github.com/dfinity/cdk-rs"
# MSRV
# Avoid updating this field unless we use new Rust features.
# Sync with the `toolchain` field when setting up Rust toolchain in ci.yml msrv job.
rust-version = "1.75.0"
license = "Apache-2.0"

[profile.canister-release]
inherits = "release"
debug = false
panic = "abort"
lto = true
opt-level = 'z'

[workspace.dependencies]
ic0 = { path = "ic0", version = "1.0.0" }
ic-cdk = { path = "ic-cdk", version = "0.18.5" }
ic-cdk-timers = { path = "ic-cdk-timers", version = "0.12.2" }
ic-cdk-executor = { path = "ic-cdk-executor", version = "1.0.1", default-features = false, features = [
    "v1.1",
] }
ic-management-canister-types = { path = "ic-management-canister-types", version = "0.3.2" }

candid = "0.10.13"      # sync with the doc comment in ic-cdk/README.md
candid_parser = "0.1.4"
futures = "0.3"
hex = "0.4"
quote = "1"
serde = "1"
serde_bytes = "0.11"
sha2 = "0.10"
slotmap = "1"
syn = "2"

# required for e2e-tests to have two versions of ic-cdk
[patch.crates-io]
ic-cdk-executor = { path = "ic-cdk-executor" }
