[package]
name = "candid-extractor"
version = "0.1.4"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
repository = "https://github.com/dfinity/cdk-rs"
license = "Apache-2.0"
description = "CLI tool to extract candid definition from canister WASM."
readme = "README.md"
categories = ["development-tools"]
keywords = ["internet-computer", "wasm", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md", "ic_mock.wat"]

[dependencies]
anyhow = "1"
wasmtime = "25"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
quote = "1"
syn = { version = "2", features = ["parsing", "full", "extra-traits"] }

[[example]]
name = "generate_mock_wat"
path = "util/generate_mock_wat.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/candid-extractor-v{ version }/{ name }-{ target }{ archive-suffix }"
