[package]
name = "ic-cdk-e2e-tests"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
description = "End-to-end tests for the Rust Canister Development Kit"
license = "Apache-2.0"
repository = "https://github.com/dfinity/cdk-rs"

[dependencies]
candid = "0.9"
cargo_metadata = "0.14.2"
escargot = { version = "0.5.7", features = ["print"] }
ic-cdk = { path = "../src/ic-cdk" }
ic-cdk-timers = { path = "../src/ic-cdk-timers" }
lazy_static = "1.4.0"
serde_bytes = "0.11"
futures = "0.3"

[[bin]]
name = "simple-kv-store"
path = "canisters/simple_kv_store.rs"

[[bin]]
name = "async"
path = "canisters/async.rs"

[[bin]]
name = "reverse"
path = "canisters/reverse.rs"

[[bin]]
name = "api-call"
path = "canisters/api_call.rs"

[[bin]]
name = "timers"
path = "canisters/timers.rs"

[[bin]]
name = "canister_info"
path = "canisters/canister_info.rs"

[dev-dependencies]
hex = "0.4.3"
# TODO: Use the public crate when this [PR](https://github.com/dfinity/test-state-machine-client/pull/19) merge.
ic-test-state-machine-client = { git = "https://github.com/lwshang/test-state-machine-client", branch = "lwshang/candid_0.9" }
