[package]
name = "ic-cdk-e2e-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "End-to-end tests for the Rust Canister Development Kit"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-channel.workspace = true
candid.workspace = true
env_logger.workspace = true
escargot.workspace = true
futures.workspace = true
ic-cdk.workspace = true
ic-cdk-bitcoin-canister.workspace = true
ic-cdk-management-canister = { workspace = true, features = [
    "transform-closure",
] }
ic-cdk-timers.workspace = true
lazy_static.workspace = true
prost.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true

[build-dependencies]
candid.workspace = true
ic-cdk-bindgen.workspace = true
prost-build.workspace = true

[dev-dependencies]
candid_parser.workspace = true
cargo_metadata.workspace = true
futures.workspace = true
hex.workspace = true
ic-btc-interface.workspace = true
ic-vetkd-utils.workspace = true
pocket-ic.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
