[package]
name = "ic-cdk-bitcoin-canister"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Utility for making inter-canister calls to the Bitcoin canisters on the Internet Computer"
homepage = "https://docs.rs/ic-cdk-bitcoin-canister"
documentation = "https://docs.rs/ic-cdk-bitcoin-canister"
readme = "README.md"
categories = ["api-bindings", "wasm"]
keywords = ["internet-computer", "dfinity", "canister", "cdk", "bitcoin"]
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
candid.workspace = true
ic-btc-interface.workspace = true
ic-cdk.workspace = true
