[package]
name = "ic-cdk-executor"
version = "1.0.2"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Async executor for `ic-cdk`"
categories = ["asynchronous", "rust-patterns"]
keywords = ["internet-computer", "dfinity", "canister", "cdk"]
# DO NOT change this field, not even to update the link, unless you are updating every existing version of the package.
# Update the link by updating the links-pin tag.
links = "ic-cdk async executor, see https://github.com/dfinity/cdk-rs/blob/links-pin/TROUBLESHOOTING.md"

[dependencies]
slotmap.workspace = true
ic0.workspace = true
