[package]
name = "ic-cdk-management-canister"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Utility for making inter-canister calls to the IC management canister"

[dependencies]
ic-cdk.workspace = true
ic-management-canister-types.workspace = true
candid.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true

# Only needed for transform-closure feature
ic-cdk-executor = { workspace = true, optional = true }
slotmap = { workspace = true, optional = true }

[features]
transform-closure = ["dep:ic-cdk-executor", "dep:slotmap"]

[package.metadata.docs.rs]
features = ["transform-closure"]
default-target = "wasm32-unknown-unknown"
