[package]
name = "ic-cdk-management-canister"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Utility for making inter-canister calls to the IC management canister"
homepage = "https://docs.rs/ic-cdk-management-canister"
documentation = "https://docs.rs/ic-cdk-management-canister"
readme = "README.md"
categories = ["api-bindings", "wasm"]
keywords = ["internet-computer", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[package.metadata.docs.rs]
features = ["transform-closure"]
default-target = "wasm32-unknown-unknown"

[features]
transform-closure = ["dep:ic-cdk-executor", "dep:slotmap"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-management-canister-types.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true

# Only needed for transform-closure feature
ic-cdk-executor = { workspace = true, optional = true }
slotmap = { workspace = true, optional = true }
