[package]
name = "ic-cdk"
version = "0.20.1" # sync with ic-cdk-macros
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Canister Developer Kit for the Internet Computer."
homepage = "https://docs.rs/ic-cdk"
documentation = "https://docs.rs/ic-cdk"
readme = "README.md"
categories = [
    "api-bindings",
    "data-structures",
    "no-std",
    "development-tools::ffi",
]
keywords = ["internet-computer", "types", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
candid.workspace = true
ic-cdk-executor.workspace = true
# Pin ic-cdk-macros to a specific version.
# This actually create a 1-to-1 mapping between ic-cdk and ic-cdk-macros.
# Dependents won't accidentaly upgrading ic-cdk-macros only but not ic-cdk.
# ic-cdk-macros is a hidden dependency, re-exported by ic-cdk.
# It should not be included by users direcly.
ic-cdk-macros.workspace = true
ic-error-types.workspace = true
ic0.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
candid_parser.workspace = true
futures.workspace = true
rstest.workspace = true
trybuild.workspace = true
