[package]
name = "ic-canister-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic0 = { workspace = true, features = ["mock"] }
ic-cdk = { workspace = true }
candid = { workspace = true }
time = "0.3"
libloading = { version = "0.8" }
