[package]
name = "ic-cdk-codegen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", default-features = false, features = ["full", "parsing", "clone-impls", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
candid = "0.7"

[dev-dependencies]
trybuild = "1"
ic-cdk = { version = "0.4", path = "../ic-cdk" }
tempfile = "3"
