[package]
name = "ic-cdk-codegen"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "Codegen for the Canister Developer Kit"
homepage = "https://docs.rs/ic-cdk-codegen"
documentation = "https://docs.rs/ic-cdk-codegen"
license = "Apache-2.0"
categories = ["api-bindings", "compilers", "development-tools::build-utils", "development-tools::ffi"]
keywords = ["internet-computer", "codegen", "dfinity", "canister", "cdk"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", default-features = false, features = ["full", "parsing", "clone-impls", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
candid = "0.7"

[dev-dependencies]
trybuild = "1"
ic-cdk = { version = "0.4", path = "../ic-cdk" }
tempfile = "3"
