[package]
name = "ic-cdk-http-kit"
description = "A simple toolkit for constructing and testing HTTP Outcalls on the Internet Computer"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Team", "The Internet Computer Project Developers", "Maksym Arutyunyan"]
repository = "https://github.com/dfinity/cdk-rs/ic-cdk-http-kit"
homepage = "https://github.com/dfinity/cdk-rs/ic-cdk-http-kit"
documentation = "https://docs.rs/ic-cdk-http-kit"
readme = "README.md"
license = "Apache-2.0"
keywords = ["http", "http-outcalls", "mock", "canister", "internet-computer"]
categories = ["development-tools::testing", "web-programming", "internet-computer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }

[dev-dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
futures = "0.3.27"
serde_json = "1.0.94"
tokio-test = "0.4.2"
