[package]
name = "ic-cdk-http-kit"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
description = "A simple toolkit for constructing and testing HTTP Outcalls on the Internet Computer"
homepage = "https://docs.rs/ic-cdk-http-kit"
documentation = "https://docs.rs/ic-cdk-http-kit"
license = "Apache-2.0"
readme = "README.md"
categories = [
    "development-tools::testing",
    "web-programming",
]
keywords = [
    "http", 
    "http-outcalls", 
    "mock", 
    "canister", 
    "internet-computer",
]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/dfinity/cdk-rs/ic-cdk-http-kit"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.2"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }

[dev-dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
futures = "0.3.27"
serde_json = "1.0.94"
tokio-test = "0.4.2"
