[package]
name = "ic-cdk-macros"
version = "0.7.0" # no need to sync with ic-cdk
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Canister Developer Kit macros."
homepage = "https://docs.rs/ic-cdk-macros"
documentation = "https://docs.rs/ic-cdk-macros"
readme = "README.md"
categories = [
    "api-bindings",
    "data-structures",
    "no-std",
    "development-tools::ffi",
]
keywords = ["internet-computer", "types", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[lib]
proc-macro = true

[dependencies]
candid = "0.9.0"
syn = { version = "1.0.58", features = ["fold", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_tokenstream = "0.1.0"
serde = "1.0.111"

[dev-dependencies]
trybuild = "1.0"
ic-cdk = { path = "../ic-cdk", version = "0.10" }

[features]
# This feature is not additive as normal crate features.
# Enable it may cause other dependent projects malfunctioning.
# It is only to be used by `ic-cdk`.
export_candid = []
