[package]
name = "ic-cdk-optimizer"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "WASM Optimizer for the IC CDK (experimental)."
 homepage = "https://docs.rs/ic-cdk-optimizer"
 documentation = "https://docs.rs/ic-cdk-optimizer"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std", "command-line-utilities"]
keywords = ["internet-computer", "dfinity", "canister", "cdk", "command-line-utilities"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
humansize = "1.1.0"
tempfile = "3.1.0"
wabt = "0.10.0"
