[package]
name = "ic-cdk-optimizer"
version = "0.3.4"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "WASM Optimizer for the IC CDK (experimental)."
homepage = "https://docs.rs/ic-cdk-optimizer"
documentation = "https://docs.rs/ic-cdk-optimizer"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std", "command-line-utilities"]
keywords = ["internet-computer", "dfinity", "canister", "cli", "optimizer"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryen = "0.12.0"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
humansize = "1.1.0"
wabt = "0.10.0"
