[package]
name = "ic-cdk-timers"
version = "0.11.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Timers library for the Rust CDK."
homepage = "https://docs.rs/ic-cdk"
documentation = "https://docs.rs/ic-cdk-timers"
readme = "README.md"
categories = [
    "api-bindings",
    "data-structures",
    "no-std",
    "development-tools::ffi",
]
keywords = ["internet-computer", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
ic0.workspace = true
ic-cdk.workspace = true
serde.workspace = true
serde_bytes.workspace = true
slotmap.workspace = true
futures.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=docsrs"]
