[package]
name = "ic-cdk-timers"
version = "0.3.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
description = "Timers library for the Rust CDK."
homepage = "https://docs.rs/ic-cdk"
documentation = "https://docs.rs/ic-cdk-timers"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std", "development-tools::ffi"]
keywords = ["internet-computer", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md", "build.rs"]
repository = "https://github.com/dfinity/cdk-rs"
rust-version = "1.60.0"
# DO NOT change this field, not even to update the link, unless you are updating every existing version of the package.
# Update the link by updating the links-pin tag.
links = "ic-cdk-timers (canister_global_timer), see https://github.com/dfinity/cdk-rs/blob/links-pin/TROUBLESHOOTING.md"

[dependencies]
ic-cdk = { path = "../../src/ic-cdk", version = "0.9" }
serde = "1.0.110"
serde_bytes = "0.11.7"
ic0 = { path = "../ic0", version = "0.18.9" }
slotmap = { version = "1.0.6" }
futures = { version = "0.3.25" }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=docsrs"]
