[package]
name = "ic-cdk"
version = "0.12.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Canister Developer Kit for the Internet Computer."
homepage = "https://docs.rs/ic-cdk"
documentation = "https://docs.rs/ic-cdk"
readme = "README.md"
categories = [
    "api-bindings",
    "data-structures",
    "no-std",
    "development-tools::ffi",
]
keywords = ["internet-computer", "types", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
candid.workspace = true
ic0.workspace = true
ic-cdk-macros = { path = "../ic-cdk-macros", version = "0.8.2" }
serde.workspace = true
serde_bytes.workspace = true
slotmap = { workspace = true, optional = true }

[dev-dependencies]
rstest = "0.12.0"

[features]
transform-closure = ["dep:slotmap"]

[package.metadata.docs.rs]
features = ["transform-closure"]
default-target = "wasm32-unknown-unknown"
rustdoc-args = ["--cfg=docsrs"]
