[package]
name = "ic-certified-assets"
version = "0.1.0"
edition = "2018"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
description = "Rust support for asset certification."
license = "Apache-2.0"
keywords = ["internet-computer", "dfinity"]

[dependencies]
base64 = "0.13"
candid = "0.7.10"
hex = "0.4.3"
ic-cdk = { path = "../ic-cdk", version = "0.4" }
ic-cdk-macros = { path = "../ic-cdk-macros", version = "0.4" }
ic-types = "0.3.0"
ic-certified-map = { path = "../ic-certified-map", version = "0.3" }
num-traits = "0.2.14"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.9.1"
